[gd_scene load_steps=9 format=3 uid="uid://rlvyp8w83cdj"]

[ext_resource type="Script" uid="uid://63oihn7h3jtk" path="res://scenes/map_units/fan_button.gd" id="1_hkb8b"]
[ext_resource type="Texture2D" uid="uid://blq5vxltu4i2w" path="res://assets/temp(临时美术资源)/button_up.png" id="2_hkb8b"]
[ext_resource type="Texture2D" uid="uid://blfrcibusn1jm" path="res://assets/temp(临时美术资源)/button_down.png" id="3_5qbrp"]
[ext_resource type="AudioStream" uid="uid://bwmdx6xidigrr" path="res://assets/temp(临时美术资源)/pressbutton.mp3" id="4_l43l4"]
[ext_resource type="AudioStream" uid="uid://brvd0hkyfp7ly" path="res://assets/temp(临时美术资源)/loosebutton.mp3" id="5_ceupt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l43l4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hkb8b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5qbrp")
}],
"loop": true,
"name": &"pressed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3juuy"]
size = Vector2(49, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ceupt"]
size = Vector2(49, 14)

[node name="button" type="RigidBody2D" groups=["grippable"]]
collision_layer = 4
collision_mask = 10
mass = 43.287
script = ExtResource("1_hkb8b")

[node name="button" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.046928395, 0.052470274)
sprite_frames = SubResource("SpriteFrames_l43l4")
animation = &"pressed"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_3juuy")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, -2)
shape = SubResource("RectangleShape2D_ceupt")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_l43l4")
volume_db = -5.687

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ceupt")
volume_db = -17.173

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
